Added README file. Upgraded mock-server dependency. Added test method that tries to add expectation in mock server.